# ha-custom-component-precoscombustiveis

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  LICENSE.md  README.md  docker-compose.yml  example.py  hacs.json  manifest.json  pyproject.toml  requirements.txt
.github/workflows/: constraints.txt  main.yml
custom_components/precoscombustiveis/: __init__.py  config_flow.py  const.py  coordinator.py  device_tracker.py  dgeg.py  entity.py  manifest.json  sensor.py  strings.json
custom_components/precoscombustiveis/translations/: en.json  pt.json
docs/: helper-sensors.md  index.html  urls.md
docs/cards/: bar-card.md  fuel-price-card.md  map-card.md  mini-graph-card.md  mushroom-chips.md
