[tool.poetry]
name = "ha-custom-component-precoscombustiveis"
version = "3.0.0"
description = "Home Assistant custom component for Portuguese fuel prices from DGEG"
readme = "README.md"
license = "MIT"
authors = ["netsoft-ruidias"]
packages = [{ include = "custom_components" }]

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.9.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
aioresponses = "^0.7.6"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
filterwarnings = ["ignore::DeprecationWarning"]
markers = ["integration: marks tests that call the real DGEG API"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["custom_components.precoscombustiveis"]

[tool.coverage.run]
source = ["custom_components/precoscombustiveis"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
